navbar z-index fixed

--- a/css/products-style.css
+++ b/css/products-style.css
@@ -87,7 +87,7 @@ body{
     transform: translate(-50%, -20%);
     display: flex;
     flex-direction: column;
-    z-index: 2000;
+    z-index: 500;
 }
 .scroll_down_btn img, svg{
     width: 30px;
